# Syncrotify

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  desktop_backend_entry.py  index.html  iopenpod_bridge.py  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: desktop-build.yml
electron/: main.ts  preload.cts  python-sidecar.ts  tsconfig.json
scripts/: build_backend.py  clean_electron.mjs  prepare_resources.py
src/: App.tsx  api.ts  global.d.ts  styles.css  types.ts  useSyncrotify.ts
src/components/: AppShell.tsx  Controls.tsx
src/pages/: ActivityPage.tsx  DevicesPage.tsx  SettingsPage.tsx  SyncPage.test.ts  SyncPage.tsx
syncrotify_backend/: background.py  browser_auth.py  desktop_config.py  desktop_rpc.py  device_sync.py  dl.py  metadata.py  musicbrainz.py  playlist_maker.py  tagging.py
syncrotify_backend/wlg/: dataprovider.py  mediafile.py  whatlastgenre.py
syncrotify_iopenpod/: __init__.py
tests/: test_desktop_config.py  test_device_sync.py  test_dl.py  test_prepare_resources.py
