[project]
name = "syncrotify-backend"
version = "2.0.0"
description = "Headless media synchronization backend for Syncrotify."
requires-python = ">=3.11"
dependencies = [
  "mediafile",
  "mutagen",
  "pillow",
  "playwright",
  "python-dateutil",
  "requests-cache",
  "yt-dlp>=2025.03.27",
  "yt-dlp-ejs>=0.8.0",
  "ytmusicapi>=1.10.2"
]

[project.optional-dependencies]
desktop-ipod = [
  "iopenpod @ git+https://github.com/TheRealSavi/iOpenPod.git@32cac8dbd9a83c6aca2a0f34f5be8fac711ad475"
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["syncrotify_backend*", "syncrotify_iopenpod*"]

[tool.setuptools.package-data]
"syncrotify_backend.wlg" = ["data/*.txt"]
